[package]
name = "staking-contract-upgrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
ethers = "1.0.2"
ethers-core = "1.0.2"
ethers-contract = "1.0.2"
ethers-signers = "1.0.2"
ethers-providers = "1.0.2"
anyhow = "1.0.69"
serde_json = "1.0.93"
futures = "0.3.26"
ethcontract = "0.23.2"
tokio = "1.25.0"
serde = "1.0.152"

